terraform/aws/ap-northeast-2/pixell-infra/kubectl-manifests/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mlflow
  name: mlflow-deploy
  labels:
    app.kubernetes.io/name: app-mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-mlflow
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-mlflow
    spec:
      containers:
      - name: mlflow
        image: python:3.12
        resources:
          requests:
            cpu: "2"      
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "2Gi"
        ports:
        - containerPort: 5000
        command: ["/bin/sh", "-c"] # 시작 명령어 추가
        args:
        - |
          pip install pymysql boto3
          pip install mlflow==2.19.0
          mlflow server --host 0.0.0.0 \
          --port 5000 \
          --default-artifact-root $${S3_BUCKET} \
          --backend-store-uri mysql+pymysql://$${MYSQL_USERNAME}:$${MYSQL_PASSWORD}@$${MYSQL_HOST}:$${MYSQL_PORT}/$${MYSQL_DATABASE}
