terraform/aws/ap-northeast-2/pixell-infra/kubectl-manifests/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: mlflow
spec:
  type: NodePort # ALB는 Ingress를 통해 Pod에 연결되므로 NodePort로 설정
  selector:
    app.kubernetes.io/name: app-mlflow
  ports:
    - name: http
      protocol: TCP
      port: 5000         # 내부에서 Pod로 전달할 포트
      targetPort: 5000
